# beziercurves

./: CMakeLists.txt
src/: arthurstyle.cpp  arthurstyle.h  arthurwidgets.cpp  arthurwidgets.h  main.cpp  pathstroke.cpp  pathstroke.h
